src/styles/elements/_quicksearch-card.css
@layer components {
    .quicksearch-card {
        --quicksearch-card-position: absolute;
        --quicksearch-card-bottom: var(--spacing-m);
        --quicksearch-card-width: calc(100% - var(--spacing-normal));
        --quicksearch-card-max-width: 420px;
        --quicksearch-card-background-color: var(--color-bg);
        --quicksearch-card-border-radius: var(--border-radius-default);
        --quicksearch-card-z-index: var(--z-index-content);
        --quicksearch-card-overflow: hidden;

        --quicksearch-card-form-background-color: var(--quicksearch-card-background-color);

        --quicksearch-card-headline-padding: var(--spacing-normal) var(--spacing-normal) 0;
        --quicksearch-card-headline-margin: 0;
        --quicksearch-card-headline-font-family: var(--font-family-headline);
        --quicksearch-card-headline-font-size: var(--font-size-m);
        --quicksearch-card-headline-font-weight: var(--font-weight-headline);
        --quicksearch-card-headline-color: var(--color-primary);

        position: var(--quicksearch-card-position);
        bottom: var(--quicksearch-card-bottom);
        left: var(--quicksearch-card-left);
        right: var(--quicksearch-card-right);
        width: var(--quicksearch-card-width);
        max-width: var(--quicksearch-card-max-width);
        background-color: var(--quicksearch-card-background-color);
        border-radius: var(--quicksearch-card-border-radius);
        z-index: var(--quicksearch-card-z-index);
        overflow: var(--quicksearch-card-overflow);
        container-name: quicksearch-card;
        container-type: inline-size;
    }

    [media-info-child-is-open] ~ .quicksearch-card {
        display: none;
    }

    .quicksearch-card[card-position='left'] {
        --quicksearch-card-left: var(--spacing-normal);
        --quicksearch-card-right: unset;
    }

    .quicksearch-card[card-position='right'] {
        --quicksearch-card-left: unset;
        --quicksearch-card-right: var(--spacing-normal);
    }

    .quicksearch-card__form {
        background-color: var(--quicksearch-card-form-background-color);
    }

    .quicksearch-card__headline {
        padding: var(--quicksearch-card-headline-padding);
        margin: var(--quicksearch-card-headline-margin);
        font-family: var(--quicksearch-card-headline-font-family);
        font-size: var(--quicksearch-card-headline-font-size);
        font-weight: var(--quicksearch-card-headline-font-weight);
        color: var(--quicksearch-card-headline-color);
    }

    @container (min-width: 840px) {
        .quicksearch-card[card-position='left'] {
            --quicksearch-card-left: var(--spacing-l);
        }

        .quicksearch-card[card-position='right'] {
            --quicksearch-card-right: var(--spacing-l);
        }
    }

    @container (min-width: 1280px) {
        .quicksearch-card[card-position='left'] {
            --quicksearch-card-left: var(--spacing-xxl);
        }

        .quicksearch-card[card-position='right'] {
            --quicksearch-card-right: var(--spacing-xxl);
        }
    }
}

